[tool.poetry]
name = "project3_Rusakov_M25-555"
version = "0.1.0"
description = ""
authors = ["Ekrusakov <Ekrusakov04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"
