[tool.poetry]
name = "main" 
version = "0.1.0"
description = "Final study projet"
authors = ["Ekrusakov <Ekrusakov04@gmail.com>"]

[tool.poetry.dependencies]
python = "^3.10"
asciinema = "^2.4.0"

[tool.poetry.dev-dependencies]

[build-system]
requires = ["poetry-core>=1.0.0"]
build-backend = "poetry.core.masonry.api"

[tool.poetry.scripts]
project = "main:main"

[tool.ruff]
line-length = 88
target-version = "py312"
exclude = ["venv", ".venv", "dist", "__pycache__"]

[tool.ruff.lint]
select = ["E", "F", "I"]
ignore = []